# MeridianLogistics

./: .env.example  .gitignore  CLAUDE.md  README.md  agent-map.md  architecture-overview.md  artifact-ledger.md  b1-data-sql-implementation-brief.md  b2-b3-backend-orchestrator-implementation-brief.md  backlog.md  decisions.md  dispatch-board.md  eval-plan.md  meridian-logistics-ai-context.md  meridian-logistics-case-study.txt  meridian-logistics-deck-raw.txt  plan.md  prd.md  pyproject.toml  runbook.md  security-model.md  thoughts.md
.agents/: AGENTS.md  skills.good.txt  skills.lock.json  skills.must.txt  skills.task.txt
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
backend/: __init__.py
contracts/: agent-response-schema.json  controller-checkpoint-schema.json  eval-test-schema.yaml  permission-context.json  tool-schema.yaml
db/: schema.sql  views.sql
docs/: agent-registry.md  architecture-overview.md  artifact-ledger.md  b4-frontend-implementation-brief.md  b5-eval-harness-implementation-brief.md  dispatch-board.md  eval-plan.md  meridian-logistics-deck-extracted.txt  meridian-logistics-deck-summary.md  runbook.md  source-brief.md
evals/: contracts.py  runner.py
frontend/: index.html  package-lock.json  package.json
reports/: 2026-03-13-2014-pm-prd-report.md  2026-03-13-2017-backlog-worker-report.md  2026-03-13-2024-architecture-writer-report.md  2026-03-13-2026-qa-eval-report.md  2026-03-13-2027-security-worker-report.md  2026-03-13-2031-controller-contract-board-report.md  2026-03-13-2032-tool-schema-worker-report.md  (+46 more)
(+108 files in other folders)
